@@ -2503,6 +2503,19 @@ global.EACHSCHEMA = exports.eachschema = function(group, fn) {
 	}
 };
 
+global.MAPSCHEMA = function(schema, pk) {
+	return function(response) {
+		var items = [];
+		for (var i = 0; i < response.length; i++)
+			items.push(response[i][pk || 'id']);
+		var arr = schema.split(',');
+		for (var i = 0; i < arr.length; i++) {
+			var path = arr[i].trim().split('.');
+			GETSCHEMA(path[0]).cl(path[1], items);
+		}
+	};
+};
+
 global.GETSCHEMA = exports.getschema = function(name, fn, timeout) {
 
 	if (!name || typeof(name) === 'function') {
